# hippocortex-python

./: .gitignore  LICENSE  README.md  pyproject.toml
hippocortex/: __init__.py  auto.py  client.py  config.py  extract.py  types.py  wrap.py
hippocortex/adapters/: __init__.py  _base.py  autogen.py  crewai.py  langgraph.py  openai_agents.py  openclaw.py
